# Vacancy-Trecker

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  tags.py
backend/app/crud/: users.py
backend/app/models/: users.py
backend/app/routers/: __init__.py  auth.py  jobs.py  results.py  users.py
backend/app/schemas/: __init__.py
backend/routers/: docs.py
