[tool.poetry]
name = "vacancy-trecker backend"
version = "0.1.0"
description = "Backend API"
authors = ["mssffct <herooftheday82@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.27"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.1.13"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
